--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker build -t ${{ secrets.DOCKER_USERNAME }}/liftmate:latest .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -23,6 +23,4 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and Push Docker Image
-      run: |
-        docker build -t API/csharp-backend:latest -f API/Dockerfile .
-        docker push API/csharp-backend:latest
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/liftmate:latest
