--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Set up Docker Buildx
-      uses: docker build -t ${{ secrets.DOCKER_USERNAME }}/liftmate:latest .
+      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/liftmate:latest .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
