--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,19 +26,16 @@ jobs:
       run: docker push ${{ secrets.DOCKER_USERNAME }}/liftmate:latest
 
   deploy:
-    needs: build  # Ensures the deployment runs after the build job
     runs-on: ubuntu-latest
-
+    needs: build
     steps:
-    - name: Checkout code (optional for deployment)
+    - name: Checkout code
       uses: actions/checkout@v3
 
     - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
+      uses: azure/webapps-container-deploy@v1
       with:
-        app-name: Liftmate  # Replace with your Azure Web App name
-        slot-name: production               # Use production or staging, as needed
-        images: ${{ secrets.DOCKER_USERNAME }}/liftmate:latest
-        registry-url: https://index.docker.io/v1/  # Docker Hub URL
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+        app-name: LiftmateApi
+        slot-name: production
+        images: "tiesvreeswijk/LiftmateApi:latest"
+        azure-rm-credentials: ${{ secrets.AZURE_CREDENTIALS }}
