--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Deploy to Azure Web App
-      uses: azure/webapps-container-deploy@v1
+      uses: azure/webapps-deploy@v2
       with:
         app-name: LiftmateApi
         slot-name: production
