--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,8 +22,11 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/liftmate:latest
+    - name: Build and push Docker image
+      run: |
+        docker build -t tiesvreeswijk/liftmateapi:latest .
+        docker push tiesvreeswijk/liftmateapi:latest
+
 
   deploy:
     runs-on: ubuntu-latest
