--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Push Docker Image
+name: Build and Deploy LiftmateAPI
 
 on:
   push:
@@ -7,14 +7,11 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest # hoi
+    runs-on: ubuntu-latest
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Set up Docker Buildx
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/liftmate:latest -f API/Dockerfile .
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
@@ -23,16 +20,15 @@ jobs:
         password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and Push Docker Image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/liftmate:latest
-
+      run: |
+        docker build -t ${{ secrets.DOCKER_USERNAME }}/liftmateapi:latest -f API/Dockerfile .
+        docker push ${{ secrets.DOCKER_USERNAME }}/liftmateapi:latest
 
   deploy:
     runs-on: ubuntu-latest
     needs: build
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-      
     - name: Log in to Azure with Service Principal
       uses: azure/login@v1
       with:
@@ -41,7 +37,6 @@ jobs:
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
       with:
-        app-name: LiftmateApi
-        slot-name: production
-        images: "tiesvreeswijk/LiftmateApi:latest"
-        
+        app-name: "liftmateapi" # Name of your Azure App Service
+        slot-name: "production" # Default deployment slot
+        images: "${{ secrets.DOCKER_USERNAME }}/liftmateapi:latest"
