--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -12,7 +12,7 @@
     "Audience": "your_audience"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;database=liftmate;user=root;password=;"
+    "DefaultConnection": "server=host.docker.internal;port=3306;database=liftmate;user=root;password=;"
   }
 
 
