--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -12,8 +12,7 @@
     "Audience": "your_audience"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=31.201.251.158;port=3306;database=liftmate;user=root;password=;"
+    "DefaultConnection": "server=host.docker.internal;port=3306;database=liftmate;user=root;password=;"
   }
-
-
+  
 }
