--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -12,7 +12,7 @@
     "Audience": "your_audience"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "server=host.docker.internal;port=3306;database=liftmate;user=root;password=;"
+    "DefaultConnection": "server=liftmatedatabase.mysql.database.azure.com;port=3306;database=liftmate;user=tiesvreeswijk;password=Efteling1!;"
   }
   
 }
